--- a/wiki/Group.wiki
+++ b/wiki/Group.wiki
@@ -16,13 +16,13 @@ To group results you must use the _group_ method of the driver. The _group_ meth
  * @param key (String) : the key used to group documents (see keyf param above),
  * @param reduce (JavaScriptCode) : a reduce JS function executed on the group. JS signature must be "function(obj, result):void",
  * @param initial (MongoDocument) : a list of key/value pairs used to initialize variables,
- * @param callback (Function) : the callback called when documents are ready to read. Default value is null,
+ * @param responder (MongoResponder) : the callback called when documents are ready to read. Default value is null,
  * @param keyf (JavaScriptCode) : a JS function used to calculate a key for grouping. keyf signature must be : "function(doc):{keyName: valueOfKeyForDoc}". Cf. One of key/keyf param must be provided. Default value is null,
  * @param cond (MongoDocument) : a document used to filter documents that will be grouped. Default value is null (all documents are considered),
  * @param finalize (JavaScriptCode) : a JS function used to finalize the result. JS signature must be "function(result):void". Default value is null (no finalization).
  */
 public function group(collectionName:String, key:MongoDocument, reduce:JavaScriptCode, initial:MongoDocument,
-	callback:Function, keyf:JavaScriptCode=null, cond:MongoDocument=null, finalize:JavaScriptCode=null):void
+	responder:MongoResponder, keyf:JavaScriptCode=null, cond:MongoDocument=null, finalize:JavaScriptCode=null):void
 }}}
 
 The result of a group command is a _MongoDocumentResponse_ in which there is only one document which _retval_ value contains an Array of result (build by _finalize_).
@@ -34,7 +34,7 @@ mongoDriver.group(
 	null,
 	new JavaScriptCode("function(obj, result) { result.count += obj.attrInt32; result.nb++; }"),
 	new MongoDocument("count", 0).addKeyValuePair("nb",0).addKeyValuePair("avg", 0),
-	onResponseReceived,
+	new MongoResponder(onResponseReceived),
 	new JavaScriptCode("function(doc) { return { \"attrString\" : doc.attrString }; }"),
 	new MongoDocument("attrString",
 		MongoDocument.exists(true)).
@@ -44,9 +44,17 @@ mongoDriver.group(
 
 ...
 
-private function onResponseReceived(responseDoc:MongoDocumentResponse):void {
+private function onResponseReceived(responseDoc:MongoDocumentResponse, token:*):void {
+	// with 1.4 syntax
 	if (responseDoc.numberReturned == 1) {
 		for each (var doc:MongoDocument in responseDoc.getDocument(0).getValue("retval")) {
+			// do something with doc
+		}
+	}
+	
+	// With 2.0 syntax
+	if (responDoc.isOk) {
+		for each (var doc:Object in responseDoc.interpretedResponse) {
 			// do something with doc
 		}
 	}
@@ -57,10 +65,12 @@ Please refers to MongoDB documentation to have more explanations and example of 
 
 = See also =
   * [Home],
+  * [Responder Using responder],
   * [Query] (Find, FindOne, getMore, killCursor),
   * [Count],
   * [Distinct],
   * [Group],
-  * [MapReduce]
+  * [MapReduce],
+  * [AggregationFramework]
 
 <g:plusone size="medium"></g:plusone> 
