--- a/wiki/CRUD.wiki
+++ b/wiki/CRUD.wiki
@@ -41,7 +41,7 @@ var obj:Object = new Object();
 obj.attr1 = 1;
 obj.attrInt32=22;
 obj._id = null;
-mongoDriver.insertDoc("documentsCollectionName", [obj], callbackMethod, true);
+mongoDriver.insertDoc("documentsCollectionName", [obj], responder, true);
 
 // Insert a single String (key is '')
 mongoDriver.insertDoc("documentsCollectionName", ["a simple String"]);
@@ -70,7 +70,7 @@ private var doc1:Object = {
 };
 private var doc2:Object = {...};
 private var doc3:Object = {...};
-driver.insertDoc("testu", [doc1, doc2, doc3]);
+driver.insertDoc(Constantes.documentsCollectionName, [doc1, doc2, doc3]);
 
 }}}
 
@@ -81,7 +81,7 @@ Retrieving documents is done by calling the _queryDoc_ method of the driver :
  * Query documents (ie. find, findOne, find.skip, find.limit).
  * @param collectionName (String) : the name of the collection to query from,
  * @param query (MongoDocumentQuery) : the query document,
- * @param callback (Function) : the callback called when documents are ready to read. Default value is null,
+ * @param responder (MongoResponder) : the callback called when documents are ready to read. Default value is null,
  * @param returnFields (MongoDocument) : list of field included in the response. Default is null (all fields are returned),
  * @param numberToSkip (uint) : number of docs to skip. Usefull for pagination. Default is 0,
  * @param numberToReturn (uint) : number of docs to return. Usefull for pagination. Default is 0 (returns default documents number),
@@ -92,7 +92,7 @@ Retrieving documents is done by calling the _queryDoc_ method of the driver :
  * @param exhaust (Boolean) : Stream the data down full blast in multiple "more" packages, on the assumption that the client will fully read all data queried. Faster when you are pulling a lot of data and know you want to pull it all down. Note: the client is not allowed to not read all the data unless it closes the connection.
  * @param partial (Boolean) : Get partial results from a mongos if some shards are down (instead of throwing an error) 
  **/
-public function queryDoc(collectionName:String, query:MongoDocumentQuery, callback:Function=null, returnFields:MongoDocument=null,
+public function queryDoc(collectionName:String, query:MongoDocumentQuery, responder:MongoResponder=null, returnFields:MongoDocument=null,
 		numberToSkip:uint=0, numberToReturn:int=0, tailableCursor:Boolean=false, slaveOk:Boolean=false, noCursorTimeout:Boolean=false,
 		awaitData:Boolean=false, exhaust:Boolean=false, partial:Boolean=false ):void
 }}}
@@ -100,7 +100,7 @@ public function queryDoc(collectionName:String, query:MongoDocumentQuery, callba
 Examples :
 {{{
 // find 10 first doc of a collection
-mongoDriver.queryDoc("documentsCollectionName", new MongoDocumentQuery(), onResponseReceived, null, 0, 10 );
+mongoDriver.queryDoc("documentsCollectionName", new MongoDocumentQuery(), new MongoResponder(onResponseReceived), null, 0, 10 );
 
 // all documents when "attrInt32 is greater than or equals to 19 and lower than 22
 var query:MongoDocumentQuery = new MongoDocumentQuery();
@@ -114,7 +114,7 @@ query.addQueryCriteria("attrString",
 mongoDriver.queryDoc("documentsCollectionName", query, onResponseReceived); 
 
 ...
-private function onResponseReceived(responseDoc:MongoDocumentResponse):void {
+private function onResponseReceived(responseDoc:MongoDocumentResponse, token:*):void {
 	// The documents in response
 	for (var i:int=0; i < responseDoc.numberReturned; i++) {
 		responseDoc.getDocument(i);
@@ -133,11 +133,11 @@ Updating is done by calling this driver's method :
  * Update one or more documents of a collection.
  * @param collectionName (String) : the name of the collection,
  * @param update (MongoDocumentUpdate) : the update query and modifications,
- * @param safeCallback (Function) : the callback called when operation is finished (depending on safe mode),
+ * @param safeResponder (MongoResponder) : the callback called when getLastError is send and if safe mode is well valued (cf. safe mode). Default value is null,
  * @param upsert (Boolean) : if true can perform an insert if doc don't exists. Default value is false,
  * @param multiupdate (Boolean) : if true can perform update one more than one document. Default value is false,
  */
-public function updateDoc(collectionName:String, update:MongoDocumentUpdate, safeCallback:Function = null, upsert:Boolean=false, multiUpdate:Boolean=false)
+public function updateDoc(collectionName:String, update:MongoDocumentUpdate, safeResponder:MongoResponder= null, upsert:Boolean=false, multiUpdate:Boolean=false)
 }}}
 
 Examples : 
@@ -145,13 +145,13 @@ Examples :
 // Update all existing documents, set root.attrString="newValue"
 var doc:MongoDocumentUpdate = new MongoDocumentUpdate();
 doc.addUpdateCriteria("$set", new MongoDocument("root.attrString", "newValue"));
-mongoDriver.updateDoc(Constantes.documentsCollectionName, doc, onLastErrorCallback, false, true);
+mongoDriver.updateDoc(Constantes.documentsCollectionName, doc, new MongoResponder(onResultCallback), false, true);
 
 // Update one document, set root.attrInt32=256 where root.attrInt32=18
 doc = new MongoDocumentUpdate();
 doc.addUpdateCriteria("root.attrInt32", 256);
 doc.addSelectorCriteria("root.attrInt32", 18);
-mongoDriver.updateDoc(Constantes.documentsCollectionName, doc, callbackMethod, false, false);
+mongoDriver.updateDoc(Constantes.documentsCollectionName, doc, new MongoResponder(callbackMethod), false, false);
 }}}
 
 == Deleting documents ==
@@ -161,10 +161,10 @@ To delete documents you call the following method on the driver object :
  * Delete one or more documents of a collection.
  * @param collectionName (String) : the name of the collection,
  * @param delete (MongoDocumentDelete) : the delete query,
- * @param safeCallback (Function) : the callback called when operation is finished (depending on safe mode),
+ * @param safeResponder (MongoResponder) : the callback called when getLastError is send and if safe mode is well valued (cf. safe mode). Default value is null,
  * @param singleRemove (Boolean) : if true perform a single remove. Default value is false.
  */
-public function deleteDoc(collectionName:String, doc:MongoDocumentDelete, safeCallback:Function = null, singleRemove:Boolean=false):void
+public function deleteDoc(collectionName:String, doc:MongoDocumentDelete, safeResponder:MongoResponder = null, singleRemove:Boolean=false):void
 }}}
 
 Examples :
@@ -172,18 +172,19 @@ Examples :
 // delete all docs where root.attrString = "newValue"
 var doc:MongoDocumentDelete = new MongoDocumentDelete();
 doc.addSelectorCriteria("root.attrString", "newValue");
-mongoDriver.deleteDoc("documentsCollectionName", doc, callbackMethod, false);
+mongoDriver.deleteDoc("documentsCollectionName", doc, responder, false);
 
 // Delete the first doc where attrString1="newValue" OR attrString2="otherValue"
 mongoDriver.deleteDoc(Constantes.documentsCollectionName,
 	new MongoDocumentDelete(MongoDocument.or(
 		new MongoDocument("attrString1", "newValue"),
 		new MongoDocument("attrString2", "otherValue"))),
-	onLastErrorCallback, true);
+	new MongoResponder(myCallBack, myErrorCallback), true);
 }}}
 
 = See also =
   * [Home],
+  * [Responder Using responder],
   * [CollectionManipulation Collection manipulation] (create, drop),
   * [CRUD] (Create, Retrieve, Update, Delete),
   * [Query] (Find, FindOne, getMore, killCursor)
