--- a/wiki/CollectionManipulation.wiki
+++ b/wiki/CollectionManipulation.wiki
@@ -8,26 +8,30 @@ Manipulating collections is very easy.
 Just call one of these free methods of the drivers :
 {{{
 // Create collection
-public function createCollection(collectionName:String,  safeCallback:Function = null):void
+public function createCollection(collectionName:String,  safeResponder:MongoResponder=null):void
 
 // Drop collection
-public function dropCollection(collectionName:String,  safeCallback:Function = null):void
+public function dropCollection(collectionName:String,  safeResponder:MongoResponder=null):void
 
 // Rename collection
-public function renameCollection(collectionName:String, newCollectionName:String, safeCallback:Function = null):void
+public function renameCollection(collectionName:String, newCollectionName:String, safeResponder:MongoResponder=null):void
 }}}
 
 _safeCallback_ is called by the driver when the answer is received from database.
 It must be a method with these signature :
 {{{
-private function onResponseReady (response:MongoDocumentResponse):void {
+private function onResponseReady (response:MongoDocumentResponse, token:*):void {
 	// Response is received
+	if (response.isOK) {
+		// do your work ...
+	}
 }
 }}}
 
 = See also =
 
   * [Home]
+  * [Responder Using responder],
   * [SendingCommand Running commands],
   * [CRUD] (Create, Retrieve, Update, Delete),
 
