--- a/wiki/SendingCommand.wiki
+++ b/wiki/SendingCommand.wiki
@@ -24,7 +24,8 @@ If provided, callback must have the following signature :
 private function onResponseRunCommandReady (response:MongoDocumentResponse, token:*):void
 }}}
 
-If an _interpreter_ class is not provided, the driver uses a basic interpretor which just transform the response in generic object. This generic result is available in MongoDocumentResponse.interpretedResponse.  
+If an _interpreter_ class is not provided, the driver uses a basic interpretor which just transform the response in generic object.
+This generic result is available in !MongoDocumentResponse.interpretedResponse.  
 
 == Default callback response for command ==
 A more convenient way to catch command response is to add a listener to the driver. Then all _runCommand_ call without callback provided will call the listener.
