--- a/wiki/CRUD.wiki
+++ b/wiki/CRUD.wiki
@@ -25,10 +25,10 @@ public function insertDoc(collectionName:String, documents:Array, responder:Mong
 }}}
 
 Documents is an array of objects that will be inserted in the collection. Each object can be :
-  * a MongoDocument object : a generic document,
-  * a POFO (Plain Old Flex Object) : a "normal" object like value object. Cf. [DirectObjectManipulation Direct object manipulation] for more informations.
-  * an Array of Objects,
-  * an native Flex object like String, int, Number, Date, Object, ...
+  * a !MongoDocument object : a document,
+  * a POFO (Plain Old Flex Object) : a "normal" object like value object. Cf. [DirectObject Direct object manipulation] for more informations.
+  * an Array of Object and/or ArrayCollection,
+  * an native Flex object like String, int, Number, Date, Object, ArrayCollection, ...
   * any combination of the preceding types.
 
 Examples :
