--- a/wiki/Query.wiki
+++ b/wiki/Query.wiki
@@ -26,7 +26,7 @@ Here are examples :
 // Find documents where attrInt32 >= 19 and attrInt32 < 22
 var query:MongoDocumentQuery = new MongoDocumentQuery();
 query.addQueryCriteria("attrInt32", MongoDocument.gte(19).lt(22));
-mongoDriver.queryDoc("documentsCollectionName", query, onResponseReceived); 
+mongoDriver.queryDoc("documentsCollectionName", query, new MongoResponder(onResponseReceived)); 
 
 // Find documents where attrArray values are all included in "arrayStringValue" and "false" values
 var query:MongoDocumentQuery = new MongoDocumentQuery();
@@ -39,7 +39,7 @@ query.addDocumentCriteria(
 	MongoDocument.or(
 		new MongoDocument("attrInt32", 18),
 		new MongoDocument("attr1", 1)));
-mongoDriver.queryDoc("documentsCollectionName", query, onResponseReceived);
+mongoDriver.queryDoc("documentsCollectionName", query, new MongoResponder(onResponseReceived));
 
 // Find docs where (attrInt32 mod 2 != 1) AND (attrInt32 exists)
 var query:MongoDocumentQuery = new MongoDocumentQuery();
@@ -159,13 +159,13 @@ Examples (combined with OrderBy) :
 var query:MongoDocumentQuery=new MongoDocumentQuery();
 query.addOrderByCriteria("attrInt32", true);
 // Ask for "attrString" attribute only
-driver.queryDoc("collection", query, onResponseReceivedCallback, new MongoDocument("attrString", 1));
+driver.queryDoc("collection", query, new MongoResponder(onResponseReceivedCallback), new MongoDocument("attrString", 1));
 
 // Query all doc order by attrInt32 attribute (descending) and returns all fields but attrString
 var query:MongoDocumentQuery=new MongoDocumentQuery();
 query.addOrderByCriteria("attrInt32", true);
 // Ask for "attrString" attribute only
-driver.queryDoc("collection", query, onResponseReceivedCallback, new MongoDocument("attrString", 0));
+driver.queryDoc("collection", query, new MongoResponder(onResponseReceivedCallback), new MongoDocument("attrString", 0));
 }}}
 
 == Complete example ==
@@ -174,63 +174,8 @@ Suppose you want to program a query that does (in SQL) : select attrString from 
 var query:MongoDocumentQuery=new MongoDocumentQuery();
 query.addQueryCriteria("attrBoolean", true);
 query.addOrderByCriteria("attrInt32", false);
-driver.queryDoc("collection", query, onResponseReceivedCallback, new MongoDocument("attrString", 1));
+driver.queryDoc("collection", query, new MongoResponder(onResponseReceivedCallback), new MongoDocument("attrString", 1));
 }}}
-
-== New in 1.5 - Responder and Token capabilities ==
-With 1.5 release of the driver you can now be given a token in driver's call and get this token back in the response callback.
-So, you are now able to share objects between call and response without having globals variables.
-
-Here is an complete example :
-{{{
-// Prior to 1.5 version :
-mongoDriver.queryDoc("documentsCollectionName", query, onResponseReceived);
-
-public function onResponseReceived(response:MongoDocumentResponse):void 
-// check the response
-}
-
-// After 1.5 version :
-var token:AnyClassUsedToPassInformations = ...;
-var responder:MongoResponder(onResponseReceived, onErrorCallback, token);
-
-mongoDriver.queryDoc("documentsCollectionName", query, responder);
-
-public function onResponseReceived(response:MongoDocumentResponse, token:*):void 
-// check the response
-...
-// use the token passed in the queryDoc call
-token.xxx ;
-}
-
-// You now have a errorCallback for this query call only
-public function onErrorCallback(event:Event, token:*):void {
-// the error is stored as an Event
-...
-// use the token passed in the queryDoc call
-token.xxx ;
-}}}
-
-=== Portability notes <1.5 -> 1.5 ===
-You just need to transform this call :
-{{{
-mongoDriver.driverMethod("documentsCollectionName", ..., onCallback);
-}}}
-on this (add new MongoResponder around the callback name) :
-{{{
-mongoDriver.driverMethod("documentsCollectionName", ..., new MongoResponder(onCallback));
-}}}
-
-and add a token parameter to all callbacks.
-Change this :
-{{{
-public function onCallback(response:MongoDocumentResponse):void 
-}}}
-on this (add token:*) :
-{{{
-public function onCallback(response:MongoDocumentResponse, token:*):void 
-}}}
-Changes are not so hard to do...
 
 = See also =
   * [Home],
