--- a/wiki/Count.wiki
+++ b/wiki/Count.wiki
@@ -14,12 +14,12 @@ The _count_ method signature is the following :
  * Count how many documents are compliant to a query.
  * @param collectionName (String) : the name of the collection to query from,
  * @param query (MongoDocument) : the conditions document,
- * @param callback (Function) : the callback called when documents are ready to read. Default value is null,
+ * @param responder (MongoResponder) : the callback called when documents are ready to read. Default value is null,
  * @param skip (uint) : number of docs to skip. Usefull for pagination. Default is 0,
  * @param limit (uint) : number of docs max to return. Usefull for pagination. Default is 0 (returns default documents number),
  * @param snapshot (Boolean) : if true makes a snapshot before counting.
  */
-public function count(collectionName:String, query:MongoDocument=null, callback:Function = null, skip:uint=0, limit:uint=0, snapshot:Boolean=false):void
+public function count(collectionName:String, query:MongoDocument=null, responder:MongoResponder= null, skip:uint=0, limit:uint=0, snapshot:Boolean=false):void
 }}}
 
 The query parameter can take any combinations of query criterias (cf. [Query] for more details).
@@ -28,7 +28,7 @@ Here is some examples about counting :
 {{{
 // Count how many docs are satisfying to a regexp.
 var query:MongoDocument = new MongoDocument("attrString", MongoDocument.regex("^string.*[12]$",true, false, false, false));
-mongoDriver.count(Constantes.documentsCollectionName, query, onResponseReceived); 
+mongoDriver.count(Constantes.documentsCollectionName, query, new MongoResponder(onResponseReceived)); 
 
 // The same counting but ignore the first and limit count to 250. Makes a snapshot to be sure that data are consistent across shards.
 mongoDriver.count(Constantes.documentsCollectionName, query, new MongoResponder(onResponseReceived),1,250,true); 
