--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -37,7 +37,7 @@ Main features are :
   * [MapReduce],
   * [DirectObject Direct object manipulation],
   * [ObjectID Object Identifier],
-  * [AggregrationFramework Aggregation framework],
+  * [AggregationFramework Aggregation framework],
   * [DBRef DBRef manipulation],
   * [TestingAndLogging Testing and loggin capabilities].
 
